css/aor/search-facets.css
.select-results {
  margin-top: -1px;
}
.facet-container-scrollable {
  position: absolute;
  top: 199px;
  bottom: 10px;
  height: auto;
  width: 425px;
  margin-top: -1px;
  display: none;
  overflow-x: hidden;
}
.facet-container-scrollable > h2 .clear-btn {
  float: right;
  margin: 0 10px;
  cursor: pointer;
  padding: 6px;
  color: black;
  font-size: 12px;
  opacity: 0.75;
  border-radius: 3px;
}
.clear-btn {
  display: none;
}
.clear-btn i {
  margin-left: 6px;
  font-size: 26px;
}
.facet-container-scrollable > h2 .clear-btn:hover {
  opacity: 0.85;
  background-color: #ddd;
}
.facet-container-scrollable > h2 .clear-btn:active {
  opacity: 1;
}
.facet-container-scrollable h2 {
  margin-left: 10px;
  font-weight: bold;
}

.jstree-container-ul > .jstree-node > div.jstree-wholerow.jstree-wholerow-clicked {
  background: initial;
}
.jstree-container-ul > .jstree-node > div.jstree-wholerow.jstree-wholerow-hovered,
.jstree-default .jstree-wholerow-hovered {
  background: #efefef;
}
.jstree-default .jstree-wholerow-clicked {
  background: #dbdbdb;
  background: -webkit-linear-gradient(top,#dbdbdb 0,#eaeaea 100%);
  background: linear-gradient(to bottom,#dbdbdb 0,#eaeaea 100%);
}

.jstree-node {
  font-size: 125%;
  margin-top: 5px;
}
.jstree-leaf {
  font-size: 70%;
  margin-top: 0;
}

